<?xml version="1.0"?>
<package>
  <name>ros_dwm1000</name>
  <version>0.0.1</version>
  <description>UWB Indoor Positioning Systenm</description>
  <maintainer email="jimenojmm@gmail.com">Jimeno</maintainer>
  <license>BSD</license>
  <author email="jimenojmm@gmail.com">Juan Jimeno</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-shapely</build_depend>
  <build_depend>localization</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-shapely</build_depend>
  <build_depend>localization</build_depend>

  <export>
  </export>
</package>
